// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipes Component Search filtering when input matches none of the data only shows data to match 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -14,29 +14,26 @@
        <input
          class=\\"search-filter-input\\"
          data-testid=\\"search-filter\\"
          id=\\"search-filter\\"
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"mno\\"
        />
-     </section>
-     <ul
-       class=\\"recipes-list\\"
-       data-testid=\\"recipes-list\\"
-     >
-       <li>
-         <a
-           href=\\"/recipe/abc\\"
+       <button
+         class=\\"search-filter-reset\\"
+         data-testid=\\"search-filter-reset\\"
        >
-           abc
-         </a>
-       </li>
-       <li>
-         <a
-           href=\\"/recipe/xyz\\"
+         Reset
+       </button>
+     </section>
+     <div
+       class=\\"recipes-no-results\\"
      >
-           xyz
-         </a>
-       </li>
-     </ul>
+       No results for 
+       <strong>
+         <em>
+           mno
+         </em>
+       </strong>
+     </div>
    </section>
  </DocumentFragment>"
`;

exports[`Recipes Component Search filtering when input matches subset of the data only shows data to match 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -14,29 +14,28 @@
        <input
          class=\\"search-filter-input\\"
          data-testid=\\"search-filter\\"
          id=\\"search-filter\\"
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"a\\"
        />
+       <button
+         class=\\"search-filter-reset\\"
+         data-testid=\\"search-filter-reset\\"
+       >
+         Reset
+       </button>
      </section>
      <ul
        class=\\"recipes-list\\"
        data-testid=\\"recipes-list\\"
      >
        <li>
          <a
            href=\\"/recipe/abc\\"
          >
            abc
-         </a>
-       </li>
-       <li>
-         <a
-           href=\\"/recipe/xyz\\"
-         >
-           xyz
          </a>
        </li>
      </ul>
    </section>
  </DocumentFragment>"
`;

exports[`Recipes Component when \`useFetch\` is awaiting promise to resolve displays \`Loading...\` 1`] = `
<div>
  <section>
    <h2>
      Recipes
    </h2>
    <section
      class="loader"
    >
      <div
        class="loader-wheel"
      />
      <div
        class="loader-text"
      >
        Loading
      </div>
    </section>
    0
  </section>
</div>
`;

exports[`Recipes Component when \`useFetch\` returns data displays data 1`] = `
<div>
  <section>
    <h2>
      Recipes
    </h2>
    <section
      class="search-filter-container"
    >
      <label
        for="search-filter"
      >
        Search
      </label>
      <input
        class="search-filter-input"
        data-testid="search-filter"
        id="search-filter"
        type="text"
        value=""
      />
      
    </section>
    <ul
      class="recipes-list"
      data-testid="recipes-list"
    >
      <li>
        <a
          href="/recipe/slug"
        >
          title
        </a>
      </li>
      <li>
        <a
          href="/recipe/slug2"
        >
          title2
        </a>
      </li>
    </ul>
  </section>
</div>
`;

exports[`Recipes Component when \`useFetch\` returns data when 500 status returned displays error messaging 1`] = `
<div>
  <section>
    <h2>
      Recipes
    </h2>
    <section>
      <h3>
        Whoops! There was a problem loading
         
        Recipes data.
      </h3>
      <p>
        Please reload browser to try again in a little bit.
      </p>
    </section>
  </section>
</div>
`;

exports[`Recipes Component when \`useFetch\` returns data when no data returned displays no data 1`] = `
<div>
  <section>
    <h2>
      Recipes
    </h2>
    0
  </section>
</div>
`;
